UPDATE SELLER FEATURES

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
             {%for object in off%}
                 {%include 'list_prod_show.html'%}
             {%endfor%}
-            <div class="col product-list-display last">Click Here to view more</div>
+            <div class="col product-list-display last" onclick="location.href = '/offers';">Click Here to view more</div>
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
           {%for object in best%}
               {%include 'list_prod_show.html'%}
           {%endfor%}
-          <div class="col product-list-display last">Click Here to view more</div>
+          <div class="col product-list-display last" onclick="location.href = '/bestsell';">Click Here to view more</div>
         </div>
       </div>
     </div>
