--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -15,7 +15,13 @@
     />
     <link href="{% static 'css/cart.css'%}" media="all" rel="stylesheet" />
     <link href="{% static 'css/newcart.css'%}" media="all" rel="stylesheet" />
-    
+    <style>
+      .adds:hover{
+        position: relative;
+        top : -1px;left: -1px;
+        box-shadow: rgb(255, 51, 0) 2px 2px 2px;
+      }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -46,7 +52,25 @@
           </form>
           <hr>
         <div class="container-fluid lbs" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;">
+        {%if requests.user.is_seller%}
+        helloguys
         {%for current_review in prods%}
+          <a class="row" href = "{{current_review.get_view_url}}" style="color: black; text-decoration : none;">
+              <div class="col-5 col-sm-5 col-md-4 col-lg-2"><img src="{%static current_review.Image%}" style="width: 98%; height :98%; padding: 1%;" alt=""></div>
+              <div class="col-5 col-sm-5 col-md-6 col-lg-8">
+                  <h4>{{current_review.Name}} &nbsp; 
+                    {%if obj.varient_desc%}({{obj.varient_desc}}){%endif%}
+                  </h4>
+                  &#8377;<p class = 'old-price' >{{current_review.MRP}}</p>
+                  <div class = 'discounted-price'>{{current_review.Price}}/-</div>
+                  <div style="color: rgb(255, 102, 0);">{%include 'c_ratings.html'%}</div>                      
+              </div>
+            </a>
+          <hr>
+          {%endfor%}
+        {%else%}
+        <h1> higuys</h1>
+          {%for current_review in prods%}
           <a class="row" href = "{{current_review.get_view_url}}" style="color: black; text-decoration : none;">
               <div class="col-6 col-sm-6 col-md-5 col-lg-3"><img src="{%static current_review.Image%}" style="width: 98%; height :98%; padding: 1%;" alt=""></div>
               <div class="col-6 col-sm-6 col-md-7 col-lg-9">
@@ -60,8 +84,32 @@
             </a>
           <hr>
         {%endfor%}
+        {%endif%}
         </div>
+        
         <div class="container-fluid lm" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;">
+          {%if requests.user.is_seller%}
+          {%for current_review in prods%}
+            <div class="row"  style="color: black; text-decoration : none;">
+                <div class="col-5 col-sm-5 col-md-4 col-lg-3" onclick = "location.href = '{{current_review.get_view_url}}';"><img src="{%static current_review.Image%}" style="width: 98%; height :98%; padding: 1%;" alt=""></div>
+                <div class="col-5 col-sm-5 col-md-6 col-lg-7" onclick = "location.href = '{{current_review.get_view_url}}';">
+                    <h2>{{current_review.Name}}</h2>
+                    <h5 class="old-price">&#8377;</h5><h5 class = 'old-price' >{{current_review.MRP}}</h5>
+                    <h4 class = 'discounted-price' style="display: block;">{{current_review.Price}}/-</h4>
+                    <div style="color: rgb(255, 102, 0);">{%include 'c_ratings.html'%}</div>                      
+                </div>
+                <div class="col-2" style="display: table-cell; vertical-align: middle;">
+                  <div style="position: absolute;
+                  top: 50%; left: 50%;width : 95%;
+                  transform: translateX(-50%) translateY(-50%);">
+                  <div class = 'adds' style="margin: 2%; border-radius : 10px; background-color : rgb(0, 0, 0); text-align: center; color: white;" onclick="window.open( '/products/addVarient/{{current_review.id}}');">Add Varient +</div>
+                  <div class = 'adds' style="margin: 2%; border-radius : 10px; background-color : rgb(0, 0, 0); text-align: center; color: white;" onclick="window.open( '/products/addPrice/{{current_review.id}}');">Sell This Product +</div>
+                </div>
+                </div>
+              </div>
+            <hr>
+          {%endfor%}
+          {%else%}
           {%for current_review in prods%}
             <a class="row" href = "{{current_review.get_view_url}}" style="color: black; text-decoration : none;">
                 <div class="col-6 col-sm-6 col-md-5 col-lg-3"><img src="{%static current_review.Image%}" style="width: 98%; height :98%; padding: 1%;" alt=""></div>
@@ -74,6 +122,7 @@
               </a>
             <hr>
           {%endfor%}
+          {%endif%}
           </div>
           {%else%}
           <hr>
